# ce_5073-3.1-cas-practic

./: README.md  pyproject.toml
cas_practic/: churn_predict_app.py
models/: churn-model.pck
notebooks/:  CasPractic.ipynb  client.ipynb  prova.ipynb
tests/: prova-pandas.py
