[tool.poetry]
name = "cas-practic"
version = "0.1.0"
description = "Cas pràctic en el qual s'intentarà predir mitjançant un model d'aprenentatge automàtic quins clients són propensos a deixar d'utilitzar els serveis que ofereix una determinada companyia."
authors = ["Jorge Cortés <jcortesanguita@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
ipykernel = "^6.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
